--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 remote_theme: pages-themes/primer
 # plugins:
 #   - jekyll-remote-theme # add this line to the plugins list if you already have one
+name: Awesome Japan Open Data
 title: null
 lang: ja
