--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: 日本のオープンデータ 最新情報一覧・まとめ
+site_name: 日本のオープンデータ情報一覧・まとめ
 site_description: Awesome Japan Open Data - 日本のオープンデータ、オープンデータカタログの最新情報一覧・まとめ
 repo_name: japan-opendata/awesome-japan-opendata
 repo_url: https://github.com/japan-opendata/awesome-japan-opendata
