サイト説明を改善

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: 日本のオープンデータ情報一覧・まとめ
-site_description: Awesome Japan Open Data - 日本のオープンデータ、オープンデータカタログの最新情報一覧・まとめ
+site_description: Awesome Japan Open Data - 日本最大級のオープンデータ情報のまとめ。日本のオープンデータやオープンデータカタログの最新情報を有志の手で収集・整理しています。
 repo_name: japan-opendata/awesome-japan-opendata
 repo_url: https://github.com/japan-opendata/awesome-japan-opendata
 edit_uri: edit/master/
